<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refreshLayoutConverter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ConverterFragment"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTitleFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/from"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayoutFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleFrom">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/spinnerFromConv"
                android:layout_width="95dp"
                android:layout_height="36dp"
                android:layout_marginStart="24dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:foreground="@drawable/bg_spinner"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:id="@+id/tvSelectedFromConv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/empty_string"
                    android:textColor="@android:color/background_light"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/imageButtonFromConv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:background="@android:color/transparent"
                    android:gravity="end"
                    android:clickable="false"
                    android:src="@drawable/ic_keyboard_arrow_down_gray_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/editTextFrom"
                style="@style/ThemeOverlay.AppCompat.Dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:hint="@string/nominal"
                android:layout_marginStart="12dp"
                android:inputType="numberDecimal"
                android:textColor="#fff"
                android:importantForAutofill="no" />
        </LinearLayout>

        <ImageView
            android:id="@+id/btnSwapConvertion"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="181dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_swap_vert_darker_white_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutFrom" />

        <TextView
            android:id="@+id/tvTitleTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/to"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSwapConvertion" />

        <LinearLayout
            android:id="@+id/linearLayoutTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleTo">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/spinnerToConv"
                android:layout_width="95dp"
                android:layout_height="36dp"
                android:layout_marginStart="24dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:foreground="@drawable/bg_spinner"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:id="@+id/tvSelectedToConv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/empty_string"
                    android:textColor="@android:color/background_light"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/imageButtonToConv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:background="@android:color/transparent"
                    android:gravity="end"
                    android:clickable="false"
                    android:src="@drawable/ic_keyboard_arrow_down_gray_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/editTextTo"
                style="@style/ThemeOverlay.AppCompat.Dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                tools:text="@string/nominal"
                android:layout_marginStart="12dp"
                android:inputType="numberDecimal"
                android:editable="false"
                android:focusable="false"
                android:clickable="false"
                android:longClickable="false"
                android:textColor="#fff" />
        </LinearLayout>

        <Button
            android:id="@+id/btnConvert"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/background_shape_pcolor"
            android:text="@string/convert"
            android:textAllCaps="true"
            android:textColor="#313131"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>